# IBKR-AIHedge

./: .gitignore  CONTRIBUTING.md  Dockerfile  GITHUB_SETUP.md  IBKR_AI_Hedge_Fund_Medium_Article.md  IBKR_SETUP_GUIDE.md  LICENSE  MARKETING_POST.md  README.md  config.py  cursor_setup_guide_for_generic_integrat.md  docker-compose.yml  env.template  ibkr_client.py  ibkr_integration.py  main.py  portfolio_manager.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  start_integration.py  trade_decision.py
.github/workflows/: ci.yml
docs/: api.md  configuration.md  installation.md
